production install with 1.4.8-rdg - Still some issues with configuration